# plexos-to-pypsa-converter

./: .codespell.ignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dependency-review.yml  lint.yaml  lint.yml  model-tests.yaml  model-tests.yml  test.yaml  test.yml
doc/notebooks/: 20251203-rome-workshop.ipynb
doc/visualization/: generate_coverage_heatmap.py  generate_milestones_plot.py
doc/visualization/data/: coverage.json  models.json
plexos_pypsa/data/properties/: property_usage_summary.csv
plexos_pypsa/data/properties/AEMO/: 2022 Hydrogen Superpower ISP Model_properties.csv  2022 Progressive Change ISP Model_properties.csv  2022 Slow Change ISP Model_properties.csv  2022 Step Change ISP Model_properties.csv  2024 ISP Green Energy Exports Model_properties.csv  2024 ISP Progressive Change Model_properties.csv  2024 ISP Step Change Model_properties.csv
plexos_pypsa/data/properties/CAISO/: CAISOIRP21 0130_properties.csv  CAISOIRP21 Stochastic2026 0130_properties.csv  CAISOIRP21 Stochastic2030 0130_properties.csv  CAISOIRP23Stochastic 20240517_properties.csv  CAISOSA25 20250505_properties.csv
plexos_pypsa/data/properties/NREL/: mti-118-mt-da-rt-reserves-all-generators_properties.csv
plexos_pypsa/data/properties/SEM/: PUBLIC Validation 2024-2032 Model 2025-03-14_properties.csv
plexos_pypsa/data/properties/University College Cork/: European Integrated Power & Gas Model_properties.csv  PLEXOS-World Spatial Resolution Case Study (Second Journal Submission version)_properties.csv
plexos_pypsa/data/scratch/: efficiencies.csv
plexos_pypsa/db/: discovery.py  dynamic_multiband_properties.py  models.py  parse.py  plexosdb.py  rating.py  read.py  xml_walkthrough.py
plexos_pypsa/model/: aemo_2024_prog.py  caiso_irp23.py  create_model.py  data_driven.py  marei_eu.py  marei_eu_generators_as_links.py  plexos_message.py  sem_2024.py
plexos_pypsa/network/: add.py  carriers.py  constraints.py  core.py  create_model.py  electricity_sector.py  flows.py  gas.py  generators.py  links.py  multi_sector.py  multi_sector_csv.py  multi_sector_db.py  multi_sector_db.py.backup  multi_sector_db_fixed.py  progress.py  storage.py
plexos_pypsa/scratch/: attr.py  check_attributes.py  check_vre.py  create_db.py  eff.py  emissions_exploration.py  export.py  extract_properties.py  go_through_properties.py  multivalue.py  prop.py  tbd.py  timeslice_ts.py  used_properties.py  xml_search.py  xml_walkthrough.py
plexos_pypsa/scripts/: create_model.py
plexos_pypsa/utils/: __init__.py
scripts/: download_models.py
src/: CLAUDE.md  __init__.py
src/analysis/: __init__.py  benchmarking.py  core.py  metrics.py  plotting.py  reports.py  statistics.py  styles.py  validation.py  visualizations.py
src/db/: csv_readers.py  discovery.py  models.py  parse.py  plexosdb.py  read.py  registry.py  timeslice_parser.py  xml_walkthrough.py
src/examples/: aemo_2024_prog.py  caiso_irp23.py  marei_eu.py  marei_eu_generators_as_links.py  plexos_message.py  sem_2024.py  sem_2024_csv.py
src/examples/aemo_2024_prog/: aemo_2024_prog.py  aemo_analysis.ipynb  aemo_solve.ipynb
src/examples/caiso_irp23/: caiso_analysis.ipynb  caiso_irp23.py  caiso_solve.ipynb
src/examples/nrel_118/: nrel_118.py
src/examples/sem_2024_2032/: sem_2024_2032.py
src/model/: aemo_2024_prog.py  caiso_irp23.py  marei_eu.py  marei_eu_generators_as_links.py  plexos_message.py  sem_2024.py
src/network/: carriers.py  carriers_csv.py  constraint_porting.py  constraints.py  conversion.py  core.py  core_csv.py  costs.py  costs_csv.py  create_model.py  csv_loaders.py  electricity_sector.py  flows.py  gas.py  generators.py  generators_csv.py  generators_csv_units.py  lines.py  links.py  links_csv.py  multi_sector.py  multi_sector_csv.py  multi_sector_db.py  multi_sector_db.py.backup  outages.py  progress.py  ramp.py  slack.py  storage.py  storage_csv.py
src/network/investment/: __init__.py  periods.py
src/plexos_to_pypsa_converter/analysis/: __init__.py  benchmarking.py  core.py  metrics.py  plotting.py  reports.py  validation.py  visualizations.py
src/plexos_to_pypsa_converter/db/: discovery.py  parse.py  registry.py
src/plexos_to_pypsa_converter/examples/: custom.py
src/plexos_to_pypsa_converter/examples/aemo_2024_prog/: aemo_2024_prog.py  aemo_analysis.ipynb  aemo_solve.ipynb
src/plexos_to_pypsa_converter/examples/caiso_irp23/: caiso_analysis.ipynb  caiso_irp23.py  caiso_solve.ipynb
src/plexos_to_pypsa_converter/examples/nrel_118/: nrel_118.py
src/plexos_to_pypsa_converter/network/: carriers_csv.py  conversion.py  core.py  core_csv.py  costs_csv.py  generators_csv.py  generators_csv_units.py  links_csv.py  outages.py  slack.py  storage_csv.py
src/plexos_to_pypsa_converter/utils/: __init__.py  recipe_executor.py
src/plexos_to_pypsa_converter/workflow/: __init__.py  builder.py  detection.py  executor.py  steps.py
src/scratch/: build_sem_model.py  dynamic_multiband_properties.py  emissions_exploration.py  export.py  xml_walkthrough.py
src/utils/: __init__.py  csv_export.py  model_paths.py  paths.py  recipe_executor.py
src/visualization/: __init__.py  demo_dashboard.py
src/visualization/data/: __init__.py  model_history.json
src/workflow/: __init__.py  executor.py  filters.py  steps.py
tests/: __init__.py  conftest.py
tests/fixtures/: minimal_plexos.xml
tests/fixtures/sample_data/: demand_Bus1.csv  demand_Bus2.csv  demand_single_file.csv  solar_Gen2_Solar.csv
tests/integration/: __init__.py  test_model_conversion.py  test_model_solve.py  test_workflow_examples.py
tests/integration/test_conversion/: __init__.py
tests/integration/test_optimization/: __init__.py
tests/unit/: __init__.py
tests/unit/test_db/: test_csv_readers.py  test_parse.py  test_registry.py
tests/unit/test_network/: __init__.py  test_core.py  test_generators.py  test_generators_units.py
tests/unit/test_utils/: test_paths.py
tests/unit/test_workflow/: test_executor.py  test_filters.py  test_steps.py
(+1 files in other folders)
